2005-11-18  Sven Panne  <sven.panne@aedion.de>

	* src/al_bpool.h, src/al_buffer.h, src/al_debug.h, src/al_error.h,
	src/al_ext.h, src/al_filter.h, src/al_listen.h, src/al_main.h,
	src/al_mixer.h, src/al_mixfunc.h, src/al_mixmanager.h, src/al_mspool.h,
	src/al_queue.h, src/al_rctree.h, src/al_rcvar.h, src/al_source.h,
	src/al_spool.h, src/al_threadlib.h, src/al_vector.h, src/mixaudio16.h,
	src/alc/alc_context.h, src/alc/alc_device.h, src/alc/alc_error.h,
	src/alc/alc_speaker.h: Started to remove the repetition of function
	prototypes in comments. Previously we had each and every signature in 4
	different places, which is a maintenance nightmare.

	* src/al_config.c, src/al_config.h, al_listen.c: Removed the rather
	obscure feature of being able to initialise some listener attributes via
	configuration file variables ("listener-position", "listener-velocity",
	"listener-orientation").

2005-11-17  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c, src/al_filter.c, src/al_listen.c, src/al_listen.h:
	Cleaned up listener state handling.

	* src/al_bpool.c, src/al_buffer.c, src/al_filter.c, src/al_listen.c,
	src/al_main.c, src/al_main.h, src/al_mixer.c, src/al_source.c,
	src/al_types.h, src/alc/alc_context.c, src/alc/alc_speaker.c,
	src/arch/alsa/alsa.c, src/arch/arts/arts.c, src/arch/bsd/bsd_dsp.c,
	src/arch/esd/esd.c, src/arch/irix/iris.c, src/arch/linux/lin_dsp.c,
	src/arch/sdl/sdl.c, src/arch/solaris/solaris_native.c,
	src/arch/waveout/waveout.c, src/arch/windows/windows_native.c,
	src/extensions/al_ext_capture.c, src/extensions/al_ext_loki.c,
	src/extensions/al_ext_mp3.c, src/extensions/al_ext_vorbis.c: To make a
	mapping of the spec to the implementation easier, useless naming
	creativity has been replaced by a simple naming convention. If the spec
	describes an attribute AL_FOO_BAR, the corresponding struct has a field
	foo_bar. Furthermore, the fields are ordered in the same way as they are
	described in the spec.
